Run dangerfile on PR updates

--- a/settings.json
+++ b/settings.json
@@ -41,7 +41,8 @@
     ]
   },
   "rules": {
-    "pull_request.opened": "tractionguest/peril-settings@dangerfiles/all-prs.ts"
+    "pull_request.opened": "tractionguest/peril-settings@dangerfiles/all-prs.ts",
+    "pull_request.synchronize": "tractionguest/peril-settings@dangerfiles/all-prs.ts"
   },
   "repos": {
 
